# Hochschule

./: .gitignore
Semester1/Programmieren1/: Videoquiz_01  Videoquiz_01.c
Semester1/Programmieren1/Uebungen/: A1  A1.c  F1  F1.c  F2  F2.c  G1  G1.c  G2  G2.c  L1  L1.c  L2  L2.c  L3  L3.c  L4  L4.c  L5  L5.c  L6  L6.c  L7  L7.c  L8  L8.c  N1  N1.c  N2  N2.c  R1  R1.c  S1  S1.c  T1  T1.c  Y1  Y1.c
Semester1/Programmieren1/Uebungen/Snake/: Snake  main.c  params.h  snake_hilfsfunktionen.h
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/: CMakeLists.txt  Uebung1_Collatz  Uebung1_Collatz.cpp
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/Aufgabe4/: Exercise4.cpp
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/Exercise19/: Exercise19.cpp
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/Exercise20/: Exercise20.cpp  Stack.cpp  Stack.h
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/Exercise27_28_29/: Exercise27_28_29.cpp
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/Exercise33_34_35/: Exercise33_34_35.cpp  asd.html
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/Exercise5/: Exercise5.cpp
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/Exercise6/: Exercise6.cpp
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/Exercise7/: Exercise7.cpp
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/Exercise8/: Exercise8.cpp
Semester2/AlgorithmenUndDatenstrukturen/Uebungen/Exercise9/: Exercise9.cpp
Semester2/Programmieren2/Uebungen/: CMakeLists.txt  Vector.cpp  Vector.h  Vector_Test.cpp
Semester2/Programmieren2/Uebungen/1_1/: Vector.cpp  Vector.h  Vector_Test.cpp
Semester2/Programmieren2/Uebungen/1_2/: 1_2_Test.cpp  book.cpp  book.h  magazine.cpp  magazine.h  publication.cpp  publication.h
Semester2/Programmieren2/Uebungen/2/2_1/: main.cpp
Semester2/Programmieren2/Uebungen/2/2_2/: Vector2_2.cpp
Semester2/Programmieren2/Uebungen/2/Uebung2_Code/: TestCopy.hpp  TestMailbox.hpp  ValCat_A.cpp  ValCat_B.cpp
Semester2/Programmieren2/Uebungen/2_1/Uebung2_Code/: PerfTestAllocator.hpp  TestAddressBook.hpp  TestAssign.hpp  TestMove.hpp  ValCat_C.cpp  ValCat_D.cpp
Semester2/Webdesign1/websites/cafe/: formatting.css  kaffee.htm
Semester2/Webdesign1/websites/farben/: formatting.css  index.html
Semester2/Webdesign1/websites/literaturcafe/: cafe2.htm  formatting.css
Semester3/Compiler/Uebungen/: CMakeLists.txt
Semester3/Compiler/Uebungen/Aufgabe10/: Exercise10.cpp
Semester3/Compiler/Uebungen/Aufgabe11/: Exercise11.cpp
Semester3/Compiler/Uebungen/Aufgabe12/: Exercise12.cpp
Semester3/Compiler/Uebungen/Aufgabe13/: Exercise13.cpp
Semester3/Compiler/Uebungen/Aufgabe3/: Exercise3.cpp
Semester3/Compiler/Uebungen/Aufgabe7/: Exercise7.cpp
Semester3/Softwaretechnik 2/Uebung1/: Aufgabe 1.rp  Content_Diagram.rp
