cmake_minimum_required(VERSION 3.10)
project(CompilerProject)

# Add executable targets
add_executable(Aufgabe7 Aufgabe7/Exercise7.cpp)
add_executable(Aufgabe10 Aufgabe10/Exercise10.cpp)
add_executable(Aufgabe10 Aufgabe11/Exercise11.cpp)
#add_executable(Aufgabe10 Aufgabe12/Exercise12.cpp)
#add_executable(Aufgabe10 Aufgabe13/Exercise13.cpp)
